sumo/tests/sumo/output/e3/errors/id_missing/detector.sumo
<?xml version="1.0"?>

<!-- generated on 01/02/08 13:57:57 by SUMO sumo Version 0.9.7
<configuration>

   <input>
      <net-file>net.net.xml</net-file>
      <route-files>input_routes.rou.xml</route-files>
      <additional-files>input_additional.add.xml</additional-files>
   </input>

   <time>
      <begin>0</begin>
      <end>1000</end>
   </time>

   <processing>
      <no-duration-log>true</no-duration-log>
      <no-step-log>true</no-step-log>
   </processing>

</configuration>
-->

<e3Detector>
</e3Detector>
